--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
               <div *ngIf="(arrayitems.isedit && !arrayitems.iserror )">
                 <div class="row">
                   <div>
-                    <img src="http://openweathermap.org/img/wn/{{arrayitems.icon}}@2x.png" alt="image">
+                    <img src="https://openweathermap.org/img/wn/{{arrayitems.icon}}@2x.png" alt="image">
                   </div>
                   <div class="col-12">City : {{arrayitems.city }}</div>
                   <div class="col-12">Temp : {{arrayitems.temp }}</div>
